--- a/packages/ui-library/storybook-static/iframe.html
+++ b/packages/ui-library/storybook-static/iframe.html
@@ -394,7 +394,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-C14BOabN.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-Cjoko3tP.js"></script>
   </head>
 
   <body>
